# ecom_analysis

./: CONFIDENCE_ANALYSIS_REPORT.md  DASHBOARD_README.md  DEPLOYMENT.md  Dockerfile  Procfile  README.md  api_server.py  auth.py  comprehensive_ordering_analysis.py  database.py  docker-compose.yml  historical_pattern_cache.py  models.py  pyproject.toml  requirements_dashboard.txt  run_analysis.py  run_dashboard.py  start_dashboard.py  update_predictions.py
cache/: historical_patterns_cache.json
core/: business_dashboard.py  data_exploration.py  ordering_optimizer.py  sales_analysis.db  sales_predictor.py
core/analysis_results/: complete_sku_analysis.csv  monthly_trends.csv  next_month_predictions.csv  ordering_schedule.csv  ordering_summary.csv  reorder_analysis.csv  top_skus_analysis.csv
core/csharp_draft/: SalesPredictor.cs
data/: README.md
data/raw/: moq_leadtime.xlsx
nginx/: ecom.conf
old/: PREDICTION_ACCURACY_SUMMARY.md  README.md  deploy.py  pyproject.toml  railway.json  requirements.txt  start_dashboard.py
old/config/: config.yaml
old/datasets/processed/: returns_jan_june_2025.csv
old/datasets/raw/: List of sku.csv
old/scripts/analysis/: business_intelligence_report.py  sales_returns_analysis.py
old/scripts/utilities/: cached_monthly_predictor.py  improved_monthly_predictor.py  model_management.py  monthly_predictor.py
old/src/api/: fastapi_service.py
old/src/dashboard/: index.html
requirements/: Item_masters.md  README.md  api_and_integration_specs.md  boilerplate.md  business_rules_and_constraints.md  constraints.md  data_import.md  inventory_and_warehousing.md  lead_time_management.md  multi_tenancy_and_auth.md  objective.md  ordering_system.md  project_context.md  project_overview.md  ui_and_dashboard_wireframes.md
requirements/implementation_plans/: sales_forecasting_implementation_plan.md
scripts/utilities/: historical_pattern_cache.py
src/api/: fastapi_service.py
src/dashboard/: start_dashboard.py
static/css/: auth.css  dashboard.css
static/js/: auth.js  dashboard.js
templates/: dashboard.html  login.html
