[project]
name = "ecom-analysis"
version = "0.1.0"
description = "E-commerce Sales Forecasting and Analysis"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "openpyxl>=3.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "SQLAlchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "itsdangerous>=2.1.2",
    "email-validator>=2.1.0.post1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
