[project]
name = "ecommerce-analysis"
version = "0.1.0"
description = "Predictive Sales & Returns Analysis for Ecommerce Supply Chain"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "prophet>=1.0.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "plotly>=5.0.0",
    "dash>=2.0.0",
    "dash-bootstrap-components>=1.0.0",
    "python-multipart>=0.0.5",
    "click>=8.0.0",
    "joblib>=1.0.0",
    "statsmodels>=0.13.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.2.0",
    "optuna>=2.10.0",
    "tqdm>=4.60.0",
    "openpyxl>=3.0.0",
    "python-dateutil>=2.8.0",
    "holidays>=0.20",
    "geopy>=2.2.0",
    "folium>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.15.0",
]

[project.scripts]
ecommerce-predict = "ecommerce_analysis.cli:main"
ecommerce-api = "ecommerce_analysis.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
